# Project-1523

./: .gitignore  README.md  del.py  main.py  new (3).py  new.py  pyproject.toml  story.docx  users_data (1).db  users_data.db  Исследовательская_работа_Квест_бот_1.docx  Разработка текстовой квест (3).docx  Разработка текстовой квест.docx  Сюжет.txt
aiogram_sqla_sample-main/: README.md  config.py  run.py
aiogram_sqla_sample-main/app/: generators.py  user.py
